--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -1,43 +1,56 @@
-name: Version Bump
+name: Version Bump (on merge to main)
 
 on:
   pull_request:
     branches: [main]
     types: [closed]
 
+permissions:
+  contents: write
+
+concurrency:
+  group: version-bump-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   bump:
-    if: github.event.pull_request.merged == true
+    if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout main with full history + tags
+        uses: actions/checkout@v4
         with:
+          ref: main
           fetch-depth: 0
+          fetch-tags: true
+          persist-credentials: true
 
-      - name: Checkout latest main
-        run: |
-          git fetch origin main
-          git checkout -B main origin/main
-
-      - name: Use Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: npm
+          cache: 'npm'
 
       - run: npm ci
 
-      - name: Bump version and push tag
+      - name: Configure git as the bot
         run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          npm version patch -m "chore: release %s [skip ci]"
-          git push origin HEAD:main --follow-tags
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      # Optional: generate changelog and GitHub release
-      # - name: Semantic Release
-      #   uses: cycjimmy/semantic-release-action@v4
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Make sure we’re on the latest main before we create a new commit
+      - name: Sync with origin/main
+        run: |
+          git fetch --tags origin main
+          git checkout main
+          git pull --rebase origin main
+
+      - name: Bump patch, create tag, and push
+        env:
+          # Optional: skip CI on the bump commit so this workflow doesn't retrigger anything else
+          SKIP_CI: "[skip ci]"
+        run: |
+          # npm version updates package.json (+ lockfile), commits, and creates an annotated tag vX.Y.Z
+          npm version patch -m "chore: release %s $SKIP_CI"
+          # Push commit and the new tag
+          git push origin main --follow-tags
